sheets/grammar.txt
Config            → ServerBlock Config | ε
ServerBlock       → "server" "{" DirectiveList "}"

DirectiveList     → Directive DirectiveList | ε
Directive         → ListenDirective
                  | ServerNameDirective
                  | ErrorPageDirective
                  | ClientMaxBodySizeDirective
                  | LocationBlock

ListenDirective   → "listen" (Host ":" Port | Port) ";"
Host              → IP | "localhost" | Domain
Port              → Number

ServerNameDirective → "server_name" ServerNameList ";"
ServerNameList    → Identifier ServerNameList | ε

ErrorPageDirective → "error_page" Number Path ";"

ClientMaxBodySizeDirective → "client_max_body_size" Size ";"
Size              → Number Unit | Number
Unit              → "k" | "m" | "g"

LocationBlock     → "location" Path "{" LocationDirectiveList "}"
LocationDirectiveList → LocationDirective LocationDirectiveList | ε
LocationDirective → RootDirective
                  | MethodsDirective
                  | ReturnDirective
                  | AutoindexDirective
                  | IndexDirective
                  | CgiDirective
                  | UploadDirective

RootDirective     → "root" Path ";"

MethodsDirective  → "allowed_methods" MethodList ";"
MethodList        → Method MethodListTail
MethodListTail    → Method MethodListTail | ε
Method            → "GET" | "POST" | "DELETE"

ReturnDirective   → "return" Number Path ";"

AutoindexDirective → "autoindex" OnOff ";"
OnOff             → "on" | "off"

IndexDirective    → "index" FileList ";"
FileList          → Identifier FileList | ε

CgiDirective      → "cgi" Extension Path ";"
Extension         → "." Identifier

UploadDirective   → "upload_store" Path ";"
